--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -3,27 +3,68 @@ body {
   margin: 0;
   min-height: 100vh;
 }
-
+/*solution starts here*/
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0;
+}
+
+.title {
+  display: flex;
+  padding: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar-cards-container{
+  display: flex;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+}
+/* needed to add an id 'links' to the ul due to specificities*/
+#links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 284px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 24px;
+}
+
+.cards-container {
+  display: flex;
+  border: 1px solid green;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 32px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 25%;
 }
